# evolutionary-experiment-database

./: .gitignore  README.md  app.py  demo.py  main.py  pyproject.toml  validate_karpathy.py  validate_real_data.py
evo_exp_db/: __init__.py  evolution.py  fitness.py  models.py  persistence.py  visualization.py
evo_exp_db/adapters/: __init__.py  autoresearch_adapter.py  evaluator_adapter.py  karpathy_adapter.py
