[project]
name = "evolutionary-experiment-database"
version = "0.1.0"
description = "Manage autonomous research experiment results as evolutionary populations with fitness selection and genealogy tracking"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Shiro Takagi", email = "shiro@unktok.com" },
]
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "streamlit>=1.56.0",
]

[project.urls]
Repository = "https://github.com/t46/evolutionary-experiment-database"
